platform/messaging/mosquitto/mosquitto.yaml
apiVersion: apps/v1
kind: StatefulSet
metadata:
  name: mosquitto
  namespace: messaging
  labels:
    app.kubernetes.io/name: mosquitto
    app.kubernetes.io/part-of: platform
spec:
  serviceName: mosquitto
  replicas: 1
  selector:
    matchLabels:
      app.kubernetes.io/name: mosquitto
  template:
    metadata:
      labels:
        app.kubernetes.io/name: mosquitto
    spec:
      priorityClassName: edge-critical
      containers:
        - name: mosquitto
          image: eclipse-mosquitto:2.1-alpine
          imagePullPolicy: IfNotPresent
          ports:
            - name: mqtt
              containerPort: 1883
            - name: ws
              containerPort: 9001
          resources:
            requests:
              cpu: 30m
              memory: 32Mi
            limits:
              cpu: 300m
              memory: 128Mi
          volumeMounts:
            - name: config
              mountPath: /mosquitto/config/mosquitto.conf
              subPath: mosquitto.conf
            - name: config
              mountPath: /mosquitto/config/acl
              subPath: acl
            - name: auth
              mountPath: /mosquitto/config/passwd
              subPath: passwd
            - name: data
              mountPath: /mosquitto/data
      volumes:
        - name: config
          configMap:
            name: mosquitto-config
        - name: auth
          secret:
            secretName: mosquitto-auth
  volumeClaimTemplates:
    - metadata:
        name: data
      spec:
        accessModes:
          - ReadWriteOnce
        storageClassName: "local-path"
        resources:
          requests:
            storage: 2Gi
---
apiVersion: v1
kind: Service
metadata:
  name: mosquitto
  namespace: messaging
  labels:
    app.kubernetes.io/name: mosquitto
spec:
  type: ClusterIP
  selector:
    app.kubernetes.io/name: mosquitto
  ports:
    - name: mqtt
      port: 1883
      targetPort: mqtt
    - name: ws
      port: 9001
      targetPort: ws
