platform/messaging/mosquitto/ingressroute.yaml
apiVersion: traefik.io/v1alpha1
kind: IngressRoute
metadata:
  name: mosquitto-ws
  namespace: messaging
spec:
  entryPoints:
    - websecure
  routes:
    - match: Host(`mqtt.mso.lol`)
      kind: Rule
      services:
        - name: mosquitto
          port: 9001
  tls:
    certResolver: cloudflare
---
apiVersion: traefik.io/v1alpha1
kind: IngressRouteTCP
metadata:
  name: mosquitto-mqtt
  namespace: messaging
spec:
  entryPoints:
    - mqtt
  routes:
    - match: HostSNI(`*`)
      services:
        - name: mosquitto
          port: 1883
